@@ -1,5 +1,16 @@
 2021-08-26  Yusuke Suzuki  <ysuzuki@apple.com>
 
+        Float32Arrays.sort() return undefined when length < 2
+        https://bugs.webkit.org/show_bug.cgi?id=229575
+
+        Reviewed by Saam Barati.
+
+        * stress/typed-array-sort-small.js: Added.
+        (shouldBe):
+        (throw.new.Error):
+
+2021-08-26  Yusuke Suzuki  <ysuzuki@apple.com>
+
         [JSC] op_put_private_name should use modern IC and remove ByValInfo
         https://bugs.webkit.org/show_bug.cgi?id=229544
 
